objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Activity_Result__c</fullName>
        <inlineHelpText>Activity Result is required when Campaign is populated</inlineHelpText>
        <label>Activity Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Contact made</fullName>
                </value>
                <value>
                    <fullName>Invalid Number</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Replied to Email</fullName>
                </value>
                <value>
                    <fullName>Returned Voicemail</fullName>
                </value>
                <value>
                    <fullName>Voicemail box full</fullName>
                </value>
                <value>
                    <fullName>Voicemail left</fullName>
                </value>
                <value>
                    <fullName>Lead Created</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>F2F</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Instagram</fullName>
                </value>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>WhatsApp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_to_Markt_Ops__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assigned to Markt Ops</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <formula>MID(Subject, 
FIND("|", Subject, 3) + 1, 
LEN(Subject) - FIND("|", Subject, 2) 
)</formula>
        <label>Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Event__c</field>
                <operation>equals</operation>
                <valueField>Campaign.Event__c</valueField>
            </filterItems>
            <filterItems>
                <field>Campaign.Product__c</field>
                <operation>equals</operation>
                <value>VIP Registration</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_ID__c</fullName>
        <externalId>true</externalId>
        <label>DM_ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Event_Code__c</fullName>
        <formula>if(begins(Subject,"P"), 
MID( 
Subject, 
FIND("|",Subject ) + 1, 
FIND("|",RIGHT(Subject, LEN(Subject) - FIND ("|",Subject ) -1 ))) 
,"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Goldmine_ACTVCODE__c</fullName>
        <label>Goldmine ACTVCODE</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goldmine_Closed_Date__c</fullName>
        <label>Goldmine Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Goldmine_Created_Date__c</fullName>
        <label>Goldmine Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Goldmine_RESULTCODE__c</fullName>
        <label>Goldmine RESULTCODE</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_State_Code__c</fullName>
        <formula>text(Account.BillingStateCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HQ State Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IQ_Source_Id__c</fullName>
        <label>IQ Source Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Pardot_Task__c</fullName>
        <formula>!ISBLANK(Event_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Pardot Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Maintenance</fullName>
                </value>
                <value>
                    <fullName>Collections</fullName>
                </value>
                <value>
                    <fullName>Initial Retail Company Contact</fullName>
                </value>
                <value>
                    <fullName>Initial Sales Contact</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Register Additional Company Contact</fullName>
                </value>
                <value>
                    <fullName>Retail Attendee Follow Up</fullName>
                </value>
                <value>
                    <fullName>Sales follow-up</fullName>
                </value>
                <value>
                    <fullName>Send Contract</fullName>
                </value>
                <value>
                    <fullName>Send Show/ Category Information</fullName>
                </value>
                <value>
                    <fullName>Winback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pi_ee_Subject__c</fullName>
        <description>Original Subject pushed over from Pardot</description>
        <label>Pardot Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team's Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today's Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>